--- a/index.html
+++ b/index.html
@@ -484,6 +484,57 @@
       </section>
 
 
+      <!-- Services -->
+
+<section class="container" id="service">
+  <div class="text">
+      <h2>We have the best services available for you!</h2>
+  </div>
+  <div class="rowitems">
+      <div class="container-box">
+      <div class="container-image">
+         <img src="pic1.jpg" alt="Flight Services">
+      </div>
+          <h4>Flight Services</h4>
+          <p>Arrival and Departure</p>
+      </div>
+  
+      <div class="container-box">
+      <div class="container-image">
+         <img src="pic2.jpg" alt="Food Services">
+      </div>
+          <h4>Food Services</h4>
+          <p>Catering</p>
+      </div>
+
+      <div class="container-box">
+      <div class="container-image">
+          <img src="taxi-stop.png" alt="Travel Services">
+      </div>
+          <h4>Travel Services</h4>
+          <p>Pick-up/drop</p>
+      </div>
+
+      <div class="container-box">
+      <div class="container-image">
+          <img src="pic4.jpg" alt="Hotel Services">
+      </div>
+          <h4>Hotel Services</h4>
+          <p>Check-in/out</p>
+      </div>
+      <div class="container-box">
+        <div class="container-image">
+            <img src="boat.png" alt="Hotel Services">
+        </div>
+            <h4>Ferry Services</h4>
+            <p>Check-in/out</p>
+        </div>
+
+  </div>
+
+  </div>
+
+</section>
 
 
 
