--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
          <img src="pic2.jpg" alt="Food Services">
       </div>
           <h4>Food Services</h4>
-          <p>Catering</p>
+          <p>Catering, Fine Dining</p>
       </div>
 
       <div class="container-box">
@@ -527,7 +527,7 @@
             <img src="boat.png" alt="Hotel Services">
         </div>
             <h4>Ferry Services</h4>
-            <p>Check-in/out</p>
+            <p>Inter Island Cruise</p>
         </div>
 
   </div>
