--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
             </li>
 
             <li>
+              <a href="#service" class="navbar-link" data-nav-link><b>Service</b></a>
+            </li>
+            
+            <li>
               <a href="#gallery" class="navbar-link" data-nav-link><b>gallery</b></a>
             </li>
 
