--- a/index.html
+++ b/index.html
@@ -1052,9 +1052,36 @@
     <div class="footer-bottom">
       <div class="container">
 
-        <p class="copyright">
-          &copy; 2011 <a href="">Heaven Tours & Travels</a>. All rights reserved
-        </p>
+        <ul class="social-list">
+          <p class="copyright">
+            &copy; 2011 <a href="">Heaven Tours & Travels</a>. All rights reserved
+          </p>
+          <p>
+          <li>
+            <a href="https://www.facebook.com/HEAVENTOURSANDTRAVELS?mibextid=ZbWKwL" target=_blank class="social-link">
+              <ion-icon name="logo-facebook"></ion-icon>
+            </a>
+          </li>
+
+          <li>
+            <a href="https://www.instagram.com/andaman_heaven.tours?igsh=YTdteTh0bWUyNWFq" target=_blank class="social-link">
+              <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+          </li>
+
+          <li>
+            <a href="https://wa.me/919434262060"  target=_blank class="social-link">
+              <ion-icon name="logo-Whatsapp"></ion-icon>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.google.com/search?kgmid=/g/11p5htyx6r&hl=en-IN&q=Heaven+Tours+%26+Travels+-+Andaman&kgs=2c186aeda69a4d2c&shndl=30&shem=lrnolc&source=sh/x/loc/osrp/m5/1"  target=_blank class="social-link">
+              <ion-icon name="logo-Google"></ion-icon>
+            </a>
+          </li>
+            </p>
+        </ul>
+        
 
         <ul class="footer-bottom-list">
 
