--- a/index.html
+++ b/index.html
@@ -1026,7 +1026,7 @@
             <li class="contact-item">
               <ion-icon name="location-outline"></ion-icon>
 
-              <address onclick="location.href='https://maps.app.goo.gl/9LNsngehSiow2yMRA'">Port Blair, Andaman & Nicobar Islands, India</address>
+             <a href="https://maps.app.goo.gl/9LNsngehSiow2yMRA" class="contact-link">Port Blair, Andaman & Nicobar Islands, India</a>
             </li>
 
           </ul>
