--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="google-site-verification" content="nxXjUkLw0YkpobjbbiJgX3vE-EMkRbV1FMzCB_R9ycA" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/jpg" href="favicon.jpg">
   <title>Heaven Tours & Travels</title>
 
   <!-- 
