--- a/index.html
+++ b/index.html
@@ -1022,7 +1022,9 @@
             <li class="contact-item">
               <ion-icon name="call-outline"></ion-icon>
 
-              <a href="tel:+919434262060" class="contact-link">+91 9434262060, 9933205001, 8900909415</a>
+             <a href="tel:+919434262060" class="contact-link">9434262060,</a>
+              <a href="tel:+919933205001" class="contact-link">9933205001,</a>
+              <a href="tel:+918900909415" class="contact-link">8900909415</a>
             </li>
 
             <li class="contact-item">
