--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
               </li>
               <li class="gallery-item">
                 <figure class="gallery-image">
-                  <img src="sunset 3.JPG" alt="Gallery image">
+                  <img src="sunset 3.jpg" alt="Gallery image">
                 </figure>
               </li>
               <li class="gallery-item">
