--- a/index.html
+++ b/index.html
@@ -974,7 +974,7 @@
               </li>
               <li class="gallery-item">
                 <figure class="gallery-image">
-                  <img src="sunset 3.JPG" alt="Gallery image">
+                  <img src="carbin cove.jpg" alt="Gallery image">
                 </figure>
               </li>
               <li class="gallery-item">
