--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/jpg" href="favicon.jpg">
+  <link rel="icon" type="image/jpg" href="favicon2.jpg">
   <title>Heaven Tours & Travels</title>
 
   <!-- 
