--- a/index.html
+++ b/index.html
@@ -81,11 +81,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </a>
 
         <div class="header-btn-group">
-        <!---
-          button class="search-btn" aria-label="Search">
+        <button class="search-btn" aria-label="Search">
             <ion-icon name="search"></ion-icon>
           </button>
-          -->
+          
           
 
           <button class="nav-open-btn" aria-label="Open Menu" data-nav-open-btn>
