--- a/index.html
+++ b/index.html
@@ -1256,7 +1256,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </li>
 
           <li>
-            <a href="#booking" class="footer-bottom-link">FAQ</a>
+            <a href="./FAQ.html" class="footer-bottom-link">FAQ</a>
           </li>
 
         </ul>
