--- a/index.html
+++ b/index.html
@@ -1116,7 +1116,7 @@
         <div class="footer-brand">
 
           <a href="#home" class="logo">
-            <img src="heaven_logo.png" alt="Heaven Tours & Travels">
+            <img src="Heaven ORGINAL LOGO.png" alt="Heaven Tours & Travels">
           </a>
 
           <p class="footer-text">
@@ -1282,3 +1282,4 @@
 </body>
 
 </html>
+
