--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </a>
 
         <a href="#" class="logo">
-          <img src="Heaven ORGINAL LOGO.png" alt="Heaven Tours" srcset="" width="150">
+          <img src="Heaven ORGINAL LOGO 01.png" alt="Heaven Tours" srcset="" width="150">
         </a>
 
         <div class="header-btn-group">
@@ -1282,5 +1282,6 @@
 </body>
 
 </html>
+
 
 
