--- a/index.html
+++ b/index.html
@@ -183,24 +183,26 @@
     <article>
 
       <!-- 
-        - #HERO
-      -->
+      - #HERO
+    -->
 
-      <section class="hero" id="home">
-        <div class="container">
-          
+    <section class="hero" id="home">
+      <div class="slideshow">
+        <img src="main.jpg" alt="Andaman Beach" class="slide">
+        <img src="Radha Beach.jpg" alt="Coral Reef" class="slide">
+        <img src="Chidya Tapu Sunset.jpg" alt="Sunset Cruise" class="slide">
+        <img src="Jail Light and Sound Show.jpg" alt="Adventure Activities" class="slide">
+      </div>
 
-          <h2 class="h1 hero-title">Journey to explore Andaman</h2>
+      <div class="container">
+        <h2 class="h1 hero-title">Journey to explore Andaman</h2>
 
-          <div class="btn-group">
-            <button class="btn btn-primary" onclick="location.href='#aboutus'" >Learn more</button>
-
-            <button class="btn btn-secondary" onclick="location.href='#booking'"  >Book now</button>
-            
-          </div>
-
+        <div class="btn-group">
+          <button class="btn btn-primary" onclick="location.href='#aboutus'">Learn more</button>
+          <button class="btn btn-secondary" onclick="location.href='#booking'">Book now</button>
         </div>
-      </section>
+      </div>
+    </section>
 
 
 
@@ -1282,6 +1284,7 @@
 </body>
 
 </html>
+
 
 
 
