--- a/index.html
+++ b/index.html
@@ -1151,7 +1151,7 @@
 
             <li class="contact-item">
               <ion-icon name="mail-outline"></ion-icon>
-
+              <a href="mailto:andamanheaventours@gmail.com" class="contact-link">andamanheaventours@gmail.com</a>
               <a href="mailto:heaventoursandtravels2011@gmail.com" class="contact-link">heaventoursandtravels2011@gmail.com</a>
             </li>
 
@@ -1284,6 +1284,7 @@
 </body>
 
 </html>
+
 
 
 
